--- a/simulation/ipy_notebooks/polars_df_test.ipynb
+++ b/simulation/ipy_notebooks/polars_df_test.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
        "  text-align: right;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (58323, 13)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>time</th><th>e_t</th><th>e_rl</th><th>e_rr</th><th>e_t_angle</th><th>e_t_av</th><th>e_rl_angle</th><th>e_rl_av</th><th>e_rr_angle</th><th>e_rr_av</th><th>vx</th><th>vy</th><th>w</th></tr><tr><td>datetime[μs]</td><td>i64</td><td>i64</td><td>i64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>2023-02-28 16:41:44.878866</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr><tr><td>2023-02-28 16:41:45.041952</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr><tr><td>2023-02-28 16:41:45.042352</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr><tr><td>2023-02-28 16:41:45.042665</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr><tr><td>2023-02-28 16:41:45.042954</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr><tr><td>2023-02-28 16:41:45.043235</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr><tr><td>2023-02-28 16:41:45.043539</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr><tr><td>2023-02-28 16:41:45.043851</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr><tr><td>2023-02-28 16:41:45.044149</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr><tr><td>2023-02-28 16:41:45.044443</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr><tr><td>2023-02-28 16:41:45.044749</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr><tr><td>2023-02-28 16:41:45.045046</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>2023-02-28 16:52:18.687783</td><td>-32111</td><td>-89117</td><td>89170</td><td>-2889.99</td><td>0.0</td><td>-8020.53</td><td>0.0</td><td>8025.3</td><td>0.0</td><td>57032.5</td><td>-26.5</td><td>89143.5</td></tr><tr><td>2023-02-28 16:52:18.698625</td><td>-32111</td><td>-89117</td><td>89170</td><td>-2889.99</td><td>0.0</td><td>-8020.53</td><td>0.0</td><td>8025.3</td><td>0.0</td><td>57032.5</td><td>-26.5</td><td>89143.5</td></tr><tr><td>2023-02-28 16:52:18.709610</td><td>-32111</td><td>-89117</td><td>89170</td><td>-2889.99</td><td>0.0</td><td>-8020.53</td><td>0.0</td><td>8025.3</td><td>0.0</td><td>57032.5</td><td>-26.5</td><td>89143.5</td></tr><tr><td>2023-02-28 16:52:18.720397</td><td>-32111</td><td>-89117</td><td>89170</td><td>-2889.99</td><td>0.0</td><td>-8020.53</td><td>0.0</td><td>8025.3</td><td>0.0</td><td>57032.5</td><td>-26.5</td><td>89143.5</td></tr><tr><td>2023-02-28 16:52:18.731287</td><td>-32111</td><td>-89117</td><td>89170</td><td>-2889.99</td><td>0.0</td><td>-8020.53</td><td>0.0</td><td>8025.3</td><td>0.0</td><td>57032.5</td><td>-26.5</td><td>89143.5</td></tr><tr><td>2023-02-28 16:52:18.742184</td><td>-32111</td><td>-89117</td><td>89170</td><td>-2889.99</td><td>0.0</td><td>-8020.53</td><td>0.0</td><td>8025.3</td><td>0.0</td><td>57032.5</td><td>-26.5</td><td>89143.5</td></tr><tr><td>2023-02-28 16:52:18.752997</td><td>-32111</td><td>-89117</td><td>89170</td><td>-2889.99</td><td>0.0</td><td>-8020.53</td><td>0.0</td><td>8025.3</td><td>0.0</td><td>57032.5</td><td>-26.5</td><td>89143.5</td></tr><tr><td>2023-02-28 16:52:18.763925</td><td>-32111</td><td>-89117</td><td>89170</td><td>-2889.99</td><td>0.0</td><td>-8020.53</td><td>0.0</td><td>8025.3</td><td>0.0</td><td>57032.5</td><td>-26.5</td><td>89143.5</td></tr><tr><td>2023-02-28 16:52:18.774674</td><td>-32111</td><td>-89117</td><td>89170</td><td>-2889.99</td><td>0.0</td><td>-8020.53</td><td>0.0</td><td>8025.3</td><td>0.0</td><td>57032.5</td><td>-26.5</td><td>89143.5</td></tr><tr><td>2023-02-28 16:52:18.785820</td><td>-32111</td><td>-89117</td><td>89170</td><td>-2889.99</td><td>0.0</td><td>-8020.53</td><td>0.0</td><td>8025.3</td><td>0.0</td><td>57032.5</td><td>-26.5</td><td>89143.5</td></tr><tr><td>2023-02-28 16:52:18.796623</td><td>-32111</td><td>-89117</td><td>89170</td><td>-2889.99</td><td>0.0</td><td>-8020.53</td><td>0.0</td><td>8025.3</td><td>0.0</td><td>57032.5</td><td>-26.5</td><td>89143.5</td></tr><tr><td>2023-02-28 16:52:18.807320</td><td>-32111</td><td>-89117</td><td>89170</td><td>-2889.99</td><td>0.0</td><td>-8020.53</td><td>0.0</td><td>8025.3</td><td>0.0</td><td>57032.5</td><td>-26.5</td><td>89143.5</td></tr></tbody></table></div>"
+       "<small>shape: (58_323, 13)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>time</th><th>e_t</th><th>e_rl</th><th>e_rr</th><th>e_t_angle</th><th>e_t_av</th><th>e_rl_angle</th><th>e_rl_av</th><th>e_rr_angle</th><th>e_rr_av</th><th>vx</th><th>vy</th><th>w</th></tr><tr><td>datetime[μs]</td><td>i64</td><td>i64</td><td>i64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>2023-02-28 16:41:44.878866</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr><tr><td>2023-02-28 16:41:45.041952</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr><tr><td>2023-02-28 16:41:45.042352</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr><tr><td>2023-02-28 16:41:45.042665</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr><tr><td>2023-02-28 16:41:45.042954</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr><tr><td>2023-02-28 16:41:45.043235</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr><tr><td>2023-02-28 16:41:45.043539</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr><tr><td>2023-02-28 16:41:45.043851</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr><tr><td>2023-02-28 16:41:45.044149</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr><tr><td>2023-02-28 16:41:45.044443</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr><tr><td>2023-02-28 16:41:45.044749</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr><tr><td>2023-02-28 16:41:45.045046</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>2023-02-28 16:52:18.687783</td><td>-32111</td><td>-89117</td><td>89170</td><td>-2889.99</td><td>0.0</td><td>-8020.53</td><td>0.0</td><td>8025.3</td><td>0.0</td><td>57032.5</td><td>-26.5</td><td>89143.5</td></tr><tr><td>2023-02-28 16:52:18.698625</td><td>-32111</td><td>-89117</td><td>89170</td><td>-2889.99</td><td>0.0</td><td>-8020.53</td><td>0.0</td><td>8025.3</td><td>0.0</td><td>57032.5</td><td>-26.5</td><td>89143.5</td></tr><tr><td>2023-02-28 16:52:18.709610</td><td>-32111</td><td>-89117</td><td>89170</td><td>-2889.99</td><td>0.0</td><td>-8020.53</td><td>0.0</td><td>8025.3</td><td>0.0</td><td>57032.5</td><td>-26.5</td><td>89143.5</td></tr><tr><td>2023-02-28 16:52:18.720397</td><td>-32111</td><td>-89117</td><td>89170</td><td>-2889.99</td><td>0.0</td><td>-8020.53</td><td>0.0</td><td>8025.3</td><td>0.0</td><td>57032.5</td><td>-26.5</td><td>89143.5</td></tr><tr><td>2023-02-28 16:52:18.731287</td><td>-32111</td><td>-89117</td><td>89170</td><td>-2889.99</td><td>0.0</td><td>-8020.53</td><td>0.0</td><td>8025.3</td><td>0.0</td><td>57032.5</td><td>-26.5</td><td>89143.5</td></tr><tr><td>2023-02-28 16:52:18.742184</td><td>-32111</td><td>-89117</td><td>89170</td><td>-2889.99</td><td>0.0</td><td>-8020.53</td><td>0.0</td><td>8025.3</td><td>0.0</td><td>57032.5</td><td>-26.5</td><td>89143.5</td></tr><tr><td>2023-02-28 16:52:18.752997</td><td>-32111</td><td>-89117</td><td>89170</td><td>-2889.99</td><td>0.0</td><td>-8020.53</td><td>0.0</td><td>8025.3</td><td>0.0</td><td>57032.5</td><td>-26.5</td><td>89143.5</td></tr><tr><td>2023-02-28 16:52:18.763925</td><td>-32111</td><td>-89117</td><td>89170</td><td>-2889.99</td><td>0.0</td><td>-8020.53</td><td>0.0</td><td>8025.3</td><td>0.0</td><td>57032.5</td><td>-26.5</td><td>89143.5</td></tr><tr><td>2023-02-28 16:52:18.774674</td><td>-32111</td><td>-89117</td><td>89170</td><td>-2889.99</td><td>0.0</td><td>-8020.53</td><td>0.0</td><td>8025.3</td><td>0.0</td><td>57032.5</td><td>-26.5</td><td>89143.5</td></tr><tr><td>2023-02-28 16:52:18.785820</td><td>-32111</td><td>-89117</td><td>89170</td><td>-2889.99</td><td>0.0</td><td>-8020.53</td><td>0.0</td><td>8025.3</td><td>0.0</td><td>57032.5</td><td>-26.5</td><td>89143.5</td></tr><tr><td>2023-02-28 16:52:18.796623</td><td>-32111</td><td>-89117</td><td>89170</td><td>-2889.99</td><td>0.0</td><td>-8020.53</td><td>0.0</td><td>8025.3</td><td>0.0</td><td>57032.5</td><td>-26.5</td><td>89143.5</td></tr><tr><td>2023-02-28 16:52:18.807320</td><td>-32111</td><td>-89117</td><td>89170</td><td>-2889.99</td><td>0.0</td><td>-8020.53</td><td>0.0</td><td>8025.3</td><td>0.0</td><td>57032.5</td><td>-26.5</td><td>89143.5</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (58_323, 13)\n",
@@ -121,7 +121,7 @@
        "└────────────────────────────┴────────┴────────┴───────┴───┴─────────┴─────────┴───────┴─────────┘"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,6 +233,137 @@
     "#         _angle.append(angle)\n",
     "\n",
     "# df[\"theta\"] = _angle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>val</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   val\n",
+       "0   10\n",
+       "1    1\n",
+       "2    2\n",
+       "3    3\n",
+       "4    4\n",
+       "5    5"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val = [0, 1, 2, 3, 4, 5]\n",
+    "pd_df = pd.DataFrame(val, columns = [\"val\"])\n",
+    "pd_df[\"val\"].loc[0] = 10\n",
+    "\n",
+    "pd_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr > th,\n",
+       ".dataframe > tbody > tr > td {\n",
+       "  text-align: right;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (6, 1)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>val</th></tr><tr><td>i64</td></tr></thead><tbody><tr><td>0</td></tr><tr><td>1</td></tr><tr><td>2</td></tr><tr><td>3</td></tr><tr><td>4</td></tr><tr><td>5</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (6, 1)\n",
+       "┌─────┐\n",
+       "│ val │\n",
+       "│ --- │\n",
+       "│ i64 │\n",
+       "╞═════╡\n",
+       "│ 0   │\n",
+       "│ 1   │\n",
+       "│ 2   │\n",
+       "│ 3   │\n",
+       "│ 4   │\n",
+       "│ 5   │\n",
+       "└─────┘"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pl_df = pl.DataFrame(val, schema=[\"val\"])\n",
+    "pl_df[\"val\"][0] = 10\n",
+    "pl_df"
    ]
   },
   {
