--- a/ipy_notebooks/create_video_for_all_folders.ipynb
+++ b/ipy_notebooks/create_video_for_all_folders.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
      "output_type": "stream",
      "text": [
       "File does not exist, creating list of folders\n",
-      "['sk36']\n"
+      "['sk36_30_forward_slow_00', 'sk36_30_forward_slow_01', 'sk36_30_forward_slow_02', 'sk36_30_forward_slow_03', 'sk36_30_random_00', 'sk36_30_random_01', 'sk36_30_sideways_00', 'sk36_30_sideways_01']\n"
      ]
     }
    ],
@@ -44,14 +44,14 @@
     "    # Get all folders in the parent folder and save them to a text file\n",
     "    _folder_list = os.listdir(os.path.join(_base_pth, _parent_folder))\n",
     "    \n",
-    "# _folder_list = _folder_list[2:]\n",
-    "_folder_list = [_folder_list[1]]\n",
+    "_folder_list = _folder_list[3:]\n",
+    "# _folder_list = [_folder_list[1]]\n",
     "print(_folder_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,23 +116,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/8 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mCanceled future for execute_request message before replies were done"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "100%|██████████| 8/8 [01:23<00:00, 10.43s/it]\n"
      ]
     }
    ],
